--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,42 +1,32 @@
 ###############################################################################
 # tmux configuration
+#
+# NOTE: If tmux configuration not take effect immdiately.
+# try `tmux kill-server`.
 ###############################################################################
+# basic operations
+# create a new tmux session 'working'
+# $ tmux new -s working
+#
+# attach to a specific tmux session 'working'
+# $ tmux a -t working
+#
+################################################################################
+# tmux tips(NOTE: press `prefix` firstly)
+# t - show current time
+# , - change window name
+# d - detach current tmux session
 
-###############################################################################
+################################################################################
 # Reset Prefix
 ################################################################################
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
-###############################################################################
-# Global Settings
-###############################################################################
-# Set '|' for vertical and '-' for horizontal split
-bind | split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
-
-# vim-like pane switching
-bind k select-pane -U
-bind j select-pane -D
-bind h select-pane -L
-bind l select-pane -R
-
-# vim-like pane resizing, -r option supports 'repeat operations'
-bind -r C-k resize-pane -U 8
-bind -r C-j resize-pane -D 8
-bind -r C-h resize-pane -L 8
-bind -r C-l resize-pane -R 8
-
-# vim-like in copy-mode
-setw -g mode-keys vi
-bind -T copy-mode-vi 'v'   send -X begin-selection  # Begin selection in copy mode.
-bind -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
-bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mode.
-
-###############################################################################
+################################################################################
 # Unbindings
-###############################################################################
+################################################################################
 # default keys for spliting pane
 unbind '"'
 unbind %
@@ -51,9 +41,39 @@ unbind C-Down
 unbind C-Left
 unbind C-Right
 
-###############################################################################
+################################################################################
+# Global Settings
+################################################################################
+# Set '|' for vertical and '-' for horizontal split
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
+
+# vim-like pane switching
+bind k select-pane -U
+bind j select-pane -D
+bind h select-pane -L
+bind l select-pane -R
+
+# vim-like pane resizing, repeat press.
+# bind -n c-k resize-pane -U 8
+# bind -n C-j resize-pane -D 8
+# bind -n C-h resize-pane -L 8
+# bind -n C-l resize-pane -R 8
+
+bind c-k resize-pane -U 10
+bind C-j resize-pane -D 10
+bind C-h resize-pane -L 10
+bind C-l resize-pane -R 10
+
+# vim-like in copy-mode
+setw -g mode-keys vi
+bind -T copy-mode-vi 'v'   send -X begin-selection  # Begin selection in copy mode.
+bind -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
+bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mode.
+
+################################################################################
 # Custom Settings
-###############################################################################
+################################################################################
 set -g status on    # turn the status bar on
 
 # https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
