update backup script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,27 @@
 ###############################################################################
 # tmux configuration
 #
-# NOTE: If tmux configuration not take effect immdiately.
+# NOTE: If tmux configuration does not take effect immdiately.
 # try `tmux kill-server`.
 ###############################################################################
-# basic operations
-# create a new tmux session 'working'
+# Basic operations
+# Create a new tmux session 'working'
 # $ tmux new -s working
 #
-# attach to a specific tmux session 'working'
+# Attach to a specific tmux session 'working'
 # $ tmux a -t working
 #
-################################################################################
-# tmux tips(NOTE: press `prefix` firstly)
-# t - show current time
-# , - change window name
-# d - detach current tmux session
+# Detach current tmux session
+# prefix + d
+#
+# Rename window's name
+# Prefix + ,
+#
+# Rename session's name
+# Prefix + $
+#
+# IMPORTANT: list all keymappings
+# Prefix + ?
 
 ################################################################################
 # Reset Prefix
@@ -90,3 +96,7 @@ set -g pane-active-border-fg colour208
 
 # Easy config reload, Prefix + r
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+
+# Kill current pane and open a new one.
+# NOTE: If only one pane, current window will be closed.
+bind o kill-pane \; split-window -h -c '#{pane_current_path}'
