update backup script

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -99,4 +99,5 @@ bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # Kill current pane and open a new one.
 # NOTE: If only one pane, current window will be closed.
-bind o kill-pane \; split-window -h -c '#{pane_current_path}'
+bind b kill-pane \; split-window -h -c '#{pane_current_path}' \;\
+  send-keys -l 'cmd build' \; send-keys 'C-m' 'C-l'
