tmuxline works when starting a new tmux session

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,26 +53,42 @@ bind -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mo
 bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mode.
 
 # -- Custom Settings -----------------------------------------------------------
-set -g status on    # turn the status bar on
-
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set -g status-bg        colour235 #base02
-set -g status-fg        colour136 #yellow
-set -g status-attr      default
-
-set -g pane-active-border-bg default
-set -g pane-active-border-fg colour208
-
 set -g default-terminal "screen-256color"
 set -sg escape-time 1
 
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-# Find tmux session and switch to it
-bind C-f command-prompt -p find-session 'switch-client -t %%'
-
 # Kill current pane, create a new one and `cd` to 'build' directory
 # NOTE: It only works there is only two pane(left|right), right pane is in terminal.
 bind b kill-pane \; split-window -h -c '#{pane_current_path}' \;\
   send-keys -l 'cmd build' \; send-keys 'C-m' 'C-l'
+
+# -- Theme Settings ------------------------------------------------------------
+# `:TmuxlineSnapshot [file]` export your tmuxline config
+# `source-file [file]` to source your tmuxline config or put the config in tmux.conf
+set -g status-justify "centre"
+set -g status "on"
+set -g status-attr "none"
+set -g message-command-bg "colour238"
+set -g status-left-length "100"
+set -g pane-active-border-fg "colour190"
+set -g status-bg "colour234"
+set -g message-command-fg "colour255"
+set -g pane-border-fg "colour238"
+set -g message-bg "colour238"
+set -g status-left-attr "none"
+set -g status-right-attr "none"
+set -g status-right-length "100"
+set -g message-fg "colour255"
+setw -g window-status-fg "colour85"
+setw -g window-status-attr "none"
+setw -g window-status-activity-bg "colour234"
+setw -g window-status-activity-attr "none"
+setw -g window-status-activity-fg "colour190"
+setw -g window-status-separator ""
+setw -g window-status-bg "colour234"
+set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-right ""
+setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=colour234,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I  #W #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
