--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,23 +1,15 @@
-###############################################################################
+################################################################################
 # tmux configuration
-###############################################################################
+################################################################################
 # Basic operations
 # $ tmux new -s <session-name> - Create a new tmux session
 # $ tmux a -t <session-name>   - Attach to specific tmux session
-#
-# prefix + d - Detache from current tmux session
-# Prefix + , - Rename current window's name
-# Prefix + $ - Rename current session's name
-# Prefix + ? - List all keymappings
 
-# Change the prefix from `C-b` to `C-a`
+# -- Custom Settings -----------------------------------------------------------
+# Change prefix `C-b` to `C-a`
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
-
-# Unbind the default keys of spliting pane and navigate tmux window
-unbind '"'
-unbind %
 
 unbind Up
 unbind Down
@@ -29,9 +21,16 @@ unbind C-Down
 unbind C-Left
 unbind C-Right
 
+# # Unbind the default keys of spliting pane and navigate tmux window
+# unbind '"'
+# unbind %
+
 # Set '|' for vertical and '-' for horizontal split
 bind | split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
+
+bind '%' split-window -h -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
+bind '"' split-window -v -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
 
 # vim-like pane switching
 bind k select-pane -U
@@ -52,12 +51,10 @@ bind -T copy-mode-vi 'v'   send -X begin-selection  # Begin selection in copy mo
 bind -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
 bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mode.
 
-# -- Custom Settings -----------------------------------------------------------
-set -g default-terminal "screen-256color"
 set -sg escape-time 1
 
 # Reload tmux config
-bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind r source-file ~/.tmux.conf \; display-message " * tmux.conf is reloaded"
 
 # Kill current pane, create a new one and `cd` to 'build' directory
 # NOTE: It only works there is only two pane(left|right), right pane is in terminal.
@@ -67,8 +64,11 @@ bind b kill-pane \; split-window -h -c '#{pane_current_path}' \;\
 # -- Theme Settings ------------------------------------------------------------
 # `:TmuxlineSnapshot [file]` export your tmuxline config
 # `source-file [file]` to source your tmuxline config or put the config in tmux.conf
+
+set -g default-terminal "screen-256color"
 set -g status-justify "centre"
 set -g status "on"
+
 set -g status-attr "none"
 set -g message-command-bg "colour238"
 set -g status-left-length "100"
@@ -89,6 +89,9 @@ setw -g window-status-activity-fg "colour190"
 setw -g window-status-separator ""
 setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
-set -g status-right ""
+
+# displays "prefix" (in red) in statusline when prefix is pressed
+# set -g status-right "#[bg=red]#{s/root//:client_key_table}"
+
 setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
 setw -g window-status-current-format "#[fg=colour234,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I  #W #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
