change fish shell scripts and update vim commets

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,21 +22,24 @@ unbind C-Left
 unbind C-Right
 
 # # Unbind the default keys of spliting pane and navigate tmux window
-# unbind '"'
-# unbind %
+unbind '"'
+unbind %
 
 # Set '|' for vertical and '-' for horizontal split
-bind | split-window -h -c '#{pane_current_path}'
+bind \ split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
-bind '%' split-window -h -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
-bind '"' split-window -v -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
+# bind '%' split-window -h -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
+# bind '"' split-window -v -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
 
 # vim-like pane switching
 bind k select-pane -U
 bind j select-pane -D
 bind h select-pane -L
 bind l select-pane -R
+
+# Kill other panes except current one in current window
+bind / kill-pane -a
 
 # vim-like pane resizing, repeat press.
 # bind -n c-k resize-pane -U 8
@@ -56,10 +59,9 @@ set -sg escape-time 1
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display-message " * tmux.conf is reloaded"
 
-# Kill current pane, create a new one and `cd` to 'build' directory
-# NOTE: It only works there is only two pane(left|right), right pane is in terminal.
-bind b kill-pane \; split-window -h -c '#{pane_current_path}' \;\
-  send-keys -l 'cmd build' \; send-keys 'C-m' 'C-l'
+# Change to 'build' folder quickly for CMake building
+bind b send-keys -l 'cmd (tmux display -p -F "#{pane_current_path}" -t0)/build' \; \
+  send-keys 'C-m' 'C-l'
 
 # -- Theme Settings ------------------------------------------------------------
 # `:TmuxlineSnapshot [file]` export your tmuxline config
