fzf filter 'CMakeFiles' directory when searching files

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,6 +56,21 @@ bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mo
 
 set -sg escape-time 1
 
+# Tmux version 2.1 and up, allowing mouse movements
+# Toggle mouse on tmux
+bind m run "\
+  tmux show-options -g | grep -q "mouse\\s*on"; \
+  if [ \$? = 0 ]; \
+  then  \
+      toggle=off;  \
+  else  \
+      toggle=on;  \
+  fi;  \
+  tmux display-message \"mouse is now: \$toggle\";  \
+  tmux set-option -w mouse \$toggle; \
+  tmux set-option -g mouse \$toggle; \
+  "
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display-message " * tmux.conf is reloaded"
 
