--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -86,25 +86,40 @@ set -g default-terminal "screen-256color"
 set -g status-justify "centre"
 set -g status "on"
 
+# Tmux 2.x color settings
 set -g status-attr "none"
-set -g message-command-bg "colour238"
-set -g status-left-length "100"
-set -g pane-active-border-fg "colour190"
 set -g status-bg "colour234"
+set -g status-left-length "100"
 set -g message-command-fg "colour255"
+set -g message-command-bg "colour238"
 set -g pane-border-fg "colour238"
-set -g message-bg "colour238"
+set -g pane-active-border-fg "colour190"
 set -g status-left-attr "none"
 set -g status-right-attr "none"
 set -g status-right-length "100"
 set -g message-fg "colour255"
+set -g message-bg "colour238"
 setw -g window-status-fg "colour85"
+setw -g window-status-bg "colour234"
 setw -g window-status-attr "none"
+setw -g window-status-activity-fg "colour190"
 setw -g window-status-activity-bg "colour234"
 setw -g window-status-activity-attr "none"
-setw -g window-status-activity-fg "colour190"
+
+# Tmux 3.x color settings
+# set -g status-style fg="colour190",bg="colour234",none
+# set -g status-left-style fg="colour190",bg="colour234",none
+# set -g status-left-length "100"
+# set -g status-right-style fg="colour190",bg="colour234",none
+# set -g message-command-style fg="colour255",bg="colour238"
+# set -g pane-active-border-style fg="colour190"
+# set -g pane-border-style fg="colour238"
+# set -g message-style fg="colour255",bg="colour238"
+# set -g window-status-style fg="colour85",bg="colour234",none
+# set -g window-status-style fg="colour190",bg="colour234",none
+
+
 setw -g window-status-separator ""
-setw -g window-status-bg "colour234"
 set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
 
 # displays "prefix" (in red) in statusline when prefix is pressed
