mouse toggle of tmux window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,8 +59,8 @@ set -sg escape-time 1
 # Tmux version 2.1 and up, allowing mouse movements
 # Toggle mouse on tmux
 bind m run "\
-  tmux show-options -g | grep -q "mouse\\s*on"; \
-  if [ \$? = 0 ]; \
+  tmux show-options -g | grep -q \"mouse\\s*on\"; \
+  if [ \$? -eq 0 ]; \
   then  \
       toggle=off;  \
   else  \
