--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,12 +21,19 @@ unbind C-Down
 unbind C-Left
 unbind C-Right
 
+# Version-specific commands
+run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
+             sed -En "s/^tmux ([^0-9]*)([0-9]+(.[0-9]+)?).*/\2/p")'
+
 # # Unbind the default keys of spliting pane and navigate tmux window
 unbind '"'
 unbind %
 
 # Set '|' for vertical and '-' for horizontal split
-bind \ split-window -h -c '#{pane_current_path}'
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' " \
+  bind \\ split-window -h -c '#{pane_current_path}'"
+if-shell -b '[ "$(echo "$TMUX_VERSION > 2.8" | bc)" = 1 ]' " \
+  bind \\\ split-window -h -c '#{pane_current_path}'"
 bind - split-window -v -c '#{pane_current_path}'
 
 # bind '%' split-window -h -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
@@ -60,7 +67,7 @@ set -sg escape-time 1
 # Toggle mouse on tmux
 bind m run "\
   tmux show-options -g | grep -q \"mouse\\s*on\"; \
-  if [ \$? -eq 0 ]; \
+  if [ \$? = 0 ]; \
   then  \
       toggle=off;  \
   else  \
@@ -70,7 +77,7 @@ bind m run "\
   tmux set-option -w mouse \$toggle; \
   tmux set-option -g mouse \$toggle; \
   "
-
+ 
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display-message " * tmux.conf is reloaded"
 
@@ -86,38 +93,39 @@ set -g default-terminal "screen-256color"
 set -g status-justify "centre"
 set -g status "on"
 
-# Tmux 2.x color settings
-set -g status-attr "none"
-set -g status-bg "colour234"
-set -g status-left-length "100"
-set -g message-command-fg "colour255"
-set -g message-command-bg "colour238"
-set -g pane-border-fg "colour238"
-set -g pane-active-border-fg "colour190"
-set -g status-left-attr "none"
-set -g status-right-attr "none"
-set -g status-right-length "100"
-set -g message-fg "colour255"
-set -g message-bg "colour238"
-setw -g window-status-fg "colour85"
-setw -g window-status-bg "colour234"
-setw -g window-status-attr "none"
-setw -g window-status-activity-fg "colour190"
-setw -g window-status-activity-bg "colour234"
-setw -g window-status-activity-attr "none"
+# Tmux 2.8 or lower version color settings                                                        
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' ' \
+  set -g status-attr "none"; \
+  set -g status-bg "colour234"; \
+  set -g status-left-length "100"; \
+  set -g message-command-fg "colour255"; \
+  set -g message-command-bg "colour238"; \
+  set -g pane-border-fg "colour238"; \
+  set -g pane-active-border-fg "colour190"; \
+  set -g status-left-attr "none"; \
+  set -g status-right-attr "none"; \
+  set -g status-right-length "100"; \
+  set -g message-fg "colour255"; \
+  set -g message-bg "colour238"; \
+  setw -g window-status-fg "colour85"; \
+  setw -g window-status-bg "colour234"; \
+  setw -g window-status-attr "none"; \
+  setw -g window-status-activity-fg "colour190"; \
+  setw -g window-status-activity-bg "colour234"; \
+  setw -g window-status-activity-attr "none"'
 
-# Tmux 3.x color settings
-# set -g status-style fg="colour190",bg="colour234",none
-# set -g status-left-style fg="colour190",bg="colour234",none
-# set -g status-left-length "100"
-# set -g status-right-style fg="colour190",bg="colour234",none
-# set -g message-command-style fg="colour255",bg="colour238"
-# set -g pane-active-border-style fg="colour190"
-# set -g pane-border-style fg="colour238"
-# set -g message-style fg="colour255",bg="colour238"
-# set -g window-status-style fg="colour85",bg="colour234",none
-# set -g window-status-style fg="colour190",bg="colour234",none
-
+# Tmux 2.9 or higher version color settings
+if-shell -b '[ "$(echo "$TMUX_VERSION > 2.9" | bc)" = 1 ]' ' \
+  set -g status-style fg="colour190",bg="colour234",none; \
+  set -g status-left-style fg="colour190",bg="colour234",none; \
+  set -g status-left-length "100"; \
+  set -g status-right-style fg="colour190",bg="colour234",none; \
+  set -g message-command-style fg="colour255",bg="colour238"; \
+  set -g pane-active-border-style fg="colour190"; \
+  set -g pane-border-style fg="colour238"; \
+  set -g message-style fg="colour255",bg="colour238"; \
+  set -g window-status-style fg="colour85",bg="colour234",none; \
+  set -g window-status-style fg="colour190",bg="colour234",none'
 
 setw -g window-status-separator ""
 set -g status-left "#[fg=colour17,bg=colour190] #S #[fg=colour190,bg=colour234,nobold,nounderscore,noitalics]"
