--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,6 +21,9 @@ unbind C-Down
 unbind C-Left
 unbind C-Right
 
+# Cancelling select-pane that make pane deviding line bold
+unbind C-M
+
 # Version-specific commands
 run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
              sed -En "s/^tmux ([^0-9]*)([0-9]+(.[0-9]+)?).*/\2/p")'
@@ -107,7 +110,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' ' \
   set -g status-right-length "100"; \
   set -g message-fg "colour255"; \
   set -g message-bg "colour238"; \
-  setw -g window-status-fg "colour85"; \
+  setw -g window-status-fg "colour238"; \
   setw -g window-status-bg "colour234"; \
   setw -g window-status-attr "none"; \
   setw -g window-status-activity-fg "colour190"; \
