--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -80,7 +80,19 @@ bind m run "\
   tmux set-option -w mouse \$toggle; \
   tmux set-option -g mouse \$toggle; \
   "
- 
+
+# Send C-c to all other panes in the same window
+# curr_pane_idx=$(tmux display -pt \"\$TMUX_PANE\" '#{pane_index}'); \
+unbind t
+bind t run "\
+  curr_pane_idx=$(tmux display -pt \"\$TMUX_PANE\" '#{pane_index}'); \
+  for pane_idx in $(tmux list-panes -F '##{pane_index}'); do \
+    if [ \$pane_idx != \$curr_pane_idx ]; then \
+      tmux send-keys -t \$pane_idx C-c; \
+    fi; \
+  done; \
+  " 
+
 # Reload tmux config
 bind r source-file ~/.tmux.conf \; display-message " * tmux.conf is reloaded"
 
