--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,16 +1,26 @@
 ################################################################################
 # tmux configuration
 ################################################################################
-# Basic operations
-# $ tmux new -s <session-name> - Create a new tmux session
-# $ tmux a -t <session-name>   - Attach to specific tmux session
+# Basic Commands
+# tmux new -s <session-name> - Create a new session
+# tmux a -t <session-name>   - Attach to a specified session
+#
+# Tips
+# You can only hit the begining characters of session-name to speed up typing,
+# such as: `tmux a -t w` if you only have one session naming `working'.
+#
+# Shortcuts
+# <Prefix>-d                 - Deattach current session
 
-# -- Custom Settings -----------------------------------------------------------
+################################################################################
+# General Settings
+################################################################################
 # Change prefix `C-b` to `C-a`
 set -g prefix C-a
 unbind C-b
 bind C-a send-prefix
 
+# Unbind default keys
 unbind Up
 unbind Down
 unbind Left
@@ -21,29 +31,22 @@ unbind C-Down
 unbind C-Left
 unbind C-Right
 
-# cancel markig
+# Cancel marking
 unbind C-M
-
-#  bind C-0 select-pane -t 0
-# bind C-1 select-pane -t 1
-# bind C-2 select-pane -t 2
-# bind C-3 select-pane -t 3
-# bind C-4 select-pane -t 4
 
 # Version-specific commands
 run-shell 'tmux setenv -g TMUX_VERSION $(tmux -V | \
              sed -En "s/^tmux ([^0-9]*)([0-9]+(.[0-9]+)?).*/\2/p")'
 
-# # Unbind the default keys of spliting pane and navigate tmux window
+# Unbind default keys of spliting pane horizontally and vertically.
 unbind '"'
 unbind %
 
 # Set '|' for vertical and '-' for horizontal split
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' " \
-  bind \\ split-window -h -c '#{pane_current_path}'"
-if-shell -b '[ "$(echo "$TMUX_VERSION > 2.8" | bc)" = 1 ]' " \
-  bind \\\ split-window -h -c '#{pane_current_path}'"
-bind - split-window -v -c '#{pane_current_path}'
+#if-shell -b '[ "$(echo "$TMUX_VERSION > 2.9" | bc)" = 1 ]' " \
+#  bind \\\ split-window -h -c '#{pane_current_path}'"
+bind '\' split-window -h -c '#{pane_current_path}'
+bind '-' split-window -v -c '#{pane_current_path}'
 
 # bind '%' split-window -h -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
 # bind '"' split-window -v -c '#{pane_current_path}' \; send-keys -l 'cmd build' \; send-keys 'c-m' 'c-l'
@@ -70,6 +73,7 @@ bind -T copy-mode-vi 'v'   send -X begin-selection  # Begin selection in copy mo
 bind -T copy-mode-vi 'C-v' send -X rectangle-toggle # Begin selection in copy mode.
 bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mode.
 
+# Decrease response time in vim
 set -sg escape-time 1
 
 # Tmux 2.1 and newer, allow mouse movements
@@ -85,6 +89,13 @@ bind m run "\
   tmux set-option -w mouse \$toggle;               \
   tmux set-option -g mouse \$toggle;               \
   "
+
+# Reload tmux config
+bind r source-file ~/.tmux.conf \; display-message ".tmux.conf is reloaded"
+
+################################################################################
+# Programming Settings
+################################################################################
 
 # Send C-c to all other panes in the same window
 unbind t
@@ -110,21 +121,21 @@ bind u run "\
   tmux set-option -w synchronize-panes \$toggle;              \
   "
 
-# Reload tmux config
-bind r source-file ~/.tmux.conf \; display-message " * tmux.conf is reloaded"
-
 # Change to 'build' folder quickly for CMake building
 bind b send-keys -l 'cmd (tmux display -p -F "#{pane_current_path}" -t0)/build' \; \
   send-keys 'C-m' 'C-l'
 
-# -- Theme Settings ------------------------------------------------------------
+################################################################################
+# Theme Settings
+################################################################################
+# Tips
 # `:TmuxlineSnapshot [file]` export your tmuxline config
 # `source-file [file]` to source your tmuxline config or put the config in tmux.conf
 
-set -g default-terminal "screen-256color"
-set -g status-justify "centre"
-set -g renumber-windows "on"
-set -g status "on"
+set -g default-terminal tmux-256color
+set -g status-justify centre
+set -g renumber-windows on
+set -g status on
 
 # Tmux 2.8 or older color settings                                                        
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' ' \
@@ -160,14 +171,18 @@ if-shell -b '[ "$(echo "$TMUX_VERSION > 2.9" | bc)" = 1 ]' '     \
   set -g window-status-style fg="colour190",bg="colour234",none; \
   set -g window-status-style fg="colour190",bg="colour234",none'
 
-# displays "prefix" (in red) in statusline when prefix is pressed
-# set -g status-right "#[bg=red]#{s/root//:client_key_table}"
-
+# +-------------+-------------------------------------------------------------+-------------------------+
+# | status left |                       window-status                         |      status right       |
+# +-------------+-------------------------------------------------------------+-------------------------+
+# [0]            0:main                     1:bash-     2:bash  3:bash*        "linux"    10:33 22-Feb-20
+# [session name] [window index:window name] [last window]     [current window][pane title][date and time]
+#
 # #S session name
 # #I window index
 # #W window name
-setw -g status-left "#[fg=colour190,bg=colour238] #S #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]"
-setw -g status-right none
-setw -g window-status-separator none
-setw -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I  #W #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=colour190,bg=colour238] #S #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]"
+set -g status-right ""
+# displays "prefix" (in red) in statusline when prefix is pressed
+# set -g status-right "#[bg=red]#{s/root//:client_key_table}"
+set -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
+set -g window-status-current-format "#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I  #W #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
