--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -180,9 +180,9 @@ if-shell -b '[ "$(echo "$TMUX_VERSION > 2.9" | bc)" = 1 ]' '     \
 # #S session name
 # #I window index
 # #W window name
-set -g status-left "#[fg=colour190,bg=colour238] #S #[fg=colour190,bg=colour238,nobold,nounderscore,noitalics]"
+# NOTE: if you want use 256color in console like xshell, you must add `export TERM=screen-256color` in .bashrc.
+set -g status-left "#[fg=colour248,bg=colour28] #S #[fg=colour28,bg=colour234,nobold,nounderscore,noitalics]"
 set -g status-right ""
-# displays "prefix" (in red) in statusline when prefix is pressed
-# set -g status-right "#[bg=red]#{s/root//:client_key_table}"
-set -g window-status-format "#[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour234,bg=colour234,nobold,nounderscore,noitalics]"
-set -g window-status-current-format "#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour255,bg=colour238] #I  #W #[fg=colour238,bg=colour234,nobold,nounderscore,noitalics]"
+set -g window-status-separator ""
+set -g window-status-format "#[fg=colour234,bg=colour236,nobold,nounderscore,noitalics]#[fg=colour248,bg=colour236] #I  #W #[fg=colour236,bg=colour234,nobold,nounderscore,noitalics]"
+set -g window-status-current-format "#[fg=colour234,bg=colour31,nobold,nounderscore,noitalics]#[fg=colour250,bg=colour31,bold] #I  #W #[fg=colour31,bg=colour234,nobold,nounderscore,noitalics]"
