--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -132,7 +132,7 @@ bind b send-keys -l 'cmd (tmux display -p -F "#{pane_current_path}" -t0)/build' 
 # `:TmuxlineSnapshot [file]` export your tmuxline config
 # `source-file [file]` to source your tmuxline config or put the config in tmux.conf
 
-set -g default-terminal tmux-256color
+set -g default-terminal screen-256color
 set -g status-justify centre
 set -g renumber-windows on
 set -g status on
