--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -76,6 +76,9 @@ bind -T copy-mode-vi 'y'   send -X copy-selection   # Yank  selection in copy mo
 # Decrease response time in vim
 set -sg escape-time 1
 
+# Allow mouse movements by default.
+set -g mouse on
+
 # Tmux 2.1 and newer, allow mouse movements
 # Toggle mouse on tmux
 bind m run "\
