--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -124,6 +124,9 @@ bind u run "\
   tmux set-option -w synchronize-panes \$toggle;              \
   "
 
+# Drag windows with mouse.
+bind-key -n MouseDrag1Status swap-window -t=
+
 # Change to 'build' folder quickly for CMake building
 bind b send-keys -l 'cmd (tmux display -p -F "#{pane_current_path}" -t0)/build' \; \
   send-keys 'C-m' 'C-l'
